Fix center alignment for headers

--- a/css/style.css
+++ b/css/style.css
@@ -182,13 +182,11 @@ body {
   h1 {
     font-size: calc(4vw + 1.5rem);
     margin-bottom: 1vh;
-    max-width: 80%;
   }
   h2 {
     font-size: calc(1rem + 1vw);
     font-weight: 400;
     color: #444;
-    max-width: 80%;
   }
 }
 
